<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.MainCalcutor.CalcuActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_9sdp"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_sec_operand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@drawable/back_et_operation"
        android:hint=" please enter the second operand"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />


    <LinearLayout
        android:id="@+id/lin_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="horizontal"
        android:weightSum="70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sec_operand">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/white"
            android:text="@string/undo"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp" />


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/white"
            android:text="@string/plus"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/white"
            android:text="@string/minus"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/white"
            android:text="@string/multiply"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/white"
            android:text="@string/division"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/white"
            android:text="@string/redo"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_btns" />
</androidx.constraintlayout.widget.ConstraintLayout>